--- a/css/footer.css
+++ b/css/footer.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=footer.css.map */
+.footer{position:fixed;left:0;bottom:0;width:100%;background-color:#fa6e6e;color:#fff;text-align:center}.footer__links{justify-content:space-around;display:flex}ul{list-style-type:none}a{color:inherit;text-decoration:none}/*# sourceMappingURL=footer.css.map */
