--- a/css/infopage.css
+++ b/css/infopage.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=infopage.css.map */
+.upper-text{margin:100px}.upper-text>.title{font-size:60px}.upper-text>.text-1{color:red;font-size:25px}.upper-text>.text-2{font-size:30px;white-space:pre-line}.upper-text>.image{left:75rem;display:flex}/*# sourceMappingURL=infopage.css.map */
