--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,7 @@
-<<<<<<< HEAD
+#lijn {
+  height: 2rem;
+  width: 1510px;
+  background-color: grey;
+}
+
 /*# sourceMappingURL=contact.css.map */
-=======
-#lijn{height:2rem;width:1510px;background-color:gray}/*# sourceMappingURL=contact.css.map */
->>>>>>> 9624915f6434f7d37ea0fa996f48d729fd092327
