--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,5 +1,10 @@
-<<<<<<< HEAD
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.home_banner img {
+  object-fit: cover;
+}
+
 /*# sourceMappingURL=homepage.css.map */
-=======
-*{margin:0;padding:0}.home_banner img{object-fit:cover}/*# sourceMappingURL=homepage.css.map */
->>>>>>> 9624915f6434f7d37ea0fa996f48d729fd092327
