--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -3,6 +3,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    padding: 4ch;
     background-color: #FA6E6E;
     color: rgb(255, 255, 255);
     text-align: center;
