--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,7 +1,9 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+
 .navigation-menu {
     list-style-type: none;
     margin: 0;
@@ -12,13 +14,33 @@
     top: 0;
     width: 100%;
     display: flex;
+    height: 3.5rem;
     justify-content: space-between;
+
 }
 
 .navigation-menu li {
-    float: left;
     font-family: 'Playfair Display';
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    &:not(:first-of-type)::before {
+        content: '';
+        width: 100%;
+        position: absolute;
+        bottom: 10px;
+        height: 2px;
+        background-color: #B4B58A;
+        transform: scaleX(0);
+        transition: transform 300ms ease-in-out;
+        transform-origin: left;
+    }
+
+    &:not(:first-of-type):hover::before {
+        transform: scaleX(1);
+    }
 }
 
 .navigation-menu li a {
@@ -27,18 +49,16 @@
     text-align: center;
     padding: 15px;
     text-decoration: none;
-    
+    font-size: 1.5rem;
+
 }
 
-.navigation-menu li a:hover {
-    background-color: #B4B58A;
-}
 
 .navigation-menu .active {
     background-color: #4CAF50;
 }
 
-.logo-link {
+a.logo-link {
     display: flex;
     align-items: center;
     padding: 0px;
@@ -46,9 +66,8 @@
 
 .logo-link img {
     padding-left: 20px;
-    height: 60px;
+    height: 50px;
     margin-right: 10px;
-    padding: 0px;
 }
 
 .menu-link {
