--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .navigation-menu {
@@ -13,12 +14,30 @@
   top: 0;
   width: 100%;
   display: flex;
+  height: 3.5rem;
   justify-content: space-between;
 }
 
 .navigation-menu li {
-  float: left;
   font-family: "Playfair Display";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.navigation-menu li:not(:first-of-type)::before {
+  content: "";
+  width: 100%;
+  position: absolute;
+  bottom: 10px;
+  height: 2px;
+  background-color: #B4B58A;
+  transform: scaleX(0);
+  transition: transform 300ms ease-in-out;
+  transform-origin: left;
+}
+.navigation-menu li:not(:first-of-type):hover::before {
+  transform: scaleX(1);
 }
 
 .navigation-menu li a {
@@ -27,17 +46,14 @@
   text-align: center;
   padding: 15px;
   text-decoration: none;
-}
-
-.navigation-menu li a:hover {
-  background-color: #B4B58A;
+  font-size: 1.5rem;
 }
 
 .navigation-menu .active {
   background-color: #4CAF50;
 }
 
-.logo-link {
+a.logo-link {
   display: flex;
   align-items: center;
   padding: 0px;
@@ -45,9 +61,8 @@
 
 .logo-link img {
   padding-left: 20px;
-  height: 60px;
+  height: 50px;
   margin-right: 10px;
-  padding: 0px;
 }
 
 .menu-link {
