begin aan javascript en frontend bijna af

--- a/scss/infopage.scss
+++ b/scss/infopage.scss
@@ -30,4 +30,10 @@
 .page-divider > .page-divider-text{
     font-size: 35px;
 }
-    
+.big-hug-content{
+    font-size: 30px;
+    white-space: pre-line;
+}    
+.big-content > .big-hug > .big-hug-image{
+    text-align: right;
+}
