--- a/css/header.css
+++ b/css/header.css
@@ -25,7 +25,7 @@
   justify-content: center;
   position: relative;
 }
-.navigation-menu li:not(:first-of-type)::before {
+.navigation-menu li .navigation-menu li:nth-of-type(n+3)::before {
   content: "";
   width: 100%;
   position: absolute;
@@ -36,7 +36,7 @@
   transition: transform 300ms ease-in-out;
   transform-origin: left;
 }
-.navigation-menu li:not(:first-of-type):hover::before {
+.navigation-menu li .navigation-menu li:nth-of-type(n+3):hover::before {
   transform: scaleX(1);
 }
 
