--- a/scss/header.scss
+++ b/scss/header.scss
@@ -26,7 +26,7 @@
     justify-content: center;
     position: relative;
 
-    &:not(:first-of-type)::before {
+&:not(:nth-of-type(-n+2))::before {
         content: '';
         width: 100%;
         position: absolute;
@@ -38,7 +38,7 @@
         transform-origin: left;
     }
 
-    &:not(:first-of-type):hover::before {
+    &:not(:nth-of-type(-n+2)):hover::before {
         transform: scaleX(1);
     }
 }
