de helft van faq page af

--- a/css/faq.css
+++ b/css/faq.css
@@ -1,1 +1,16 @@
+.faq-banner .banner {
+  display: flex;
+  justify-content: center;
+}
+.faq-banner .divider {
+  background-color: #D2DFD9;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+}
+.faq-banner p {
+  margin-left: 5rem;
+  font-size: x-large;
+}
+
 /*# sourceMappingURL=faq.css.map */
