einde van de le

--- a/css/infopage.css
+++ b/css/infopage.css
@@ -34,4 +34,13 @@
   font-size: 35px;
 }
 
+.big-hug-content {
+  font-size: 30px;
+  white-space: pre-line;
+}
+
+.big-content > .big-hug > .big-hug-image {
+  text-align: right;
+}
+
 /*# sourceMappingURL=infopage.css.map */
