--- a/scss/header.scss
+++ b/scss/header.scss
@@ -11,6 +11,7 @@
     overflow: hidden;
     background-color: #FA6E6E;
     position: fixed;
+    position: relative;
     top: 0;
     width: 100%;
     display: flex;
