--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,5 +1,35 @@
-#lijn {
-    height: 2rem;
+iframe {
+    border:0;
+    margin-top: 3.5rem;
+}
+
+div#lijn {
+    position: relative;
+    height: 75px;
     width: 1510px;
-    background-color: grey;
+    font-family: 'Playfair Display';
+    font-size: 2rem;
+    background-color: #D2DFD9;
+    display: flex;
+    align-items: center;
+    bottom: 5px;
+    h4 {
+        position: relative;
+        left: 2.5rem;
+        font-weight: normal;
+        padding: 5px;
+    }
+    a {
+        position: relative;
+        font-weight: bold;
+        left: 2.3rem;
+        display: flex;
+        align-items: center;
+        transition: color .4s;
+
+        &:hover {
+            color: #337d36;
+            cursor: pointer;
+        }
+    }
 }
