--- a/scss/aboutUs.scss
+++ b/scss/aboutUs.scss
@@ -1,4 +1,4 @@
-.aboutUs-banner {
+  .aboutUs-banner {
   float: right;
   width: 40vw;
 }
@@ -7,10 +7,30 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  padding-left: 15px;
 }
 .title{
-    /* Set position to relative to keep the element in the document flow */
-    font-family: "Playfair Display";
-    font-weight: bolder;
+margin-top: 4rem;
+margin-bottom: 1rem;
+    font-weight: bold;
+
+}
+.aboutUs-divider{
+      background-color: #D2DFD9;
+        height: 4rem;
+        display: flex;
+        align-items: center;
+        font-size: 1.8rem;
+        margin-bottom: 1rem;
+}
+.aboutUs-text {
+  font-size: 1.2rem;
+  line-height: 1.7;
+  border-left: 14px solid #cadcd4;
+  border-radius: 10px 0 0 10px;
+  position: relative;
+  left: 10px;
+  right: 20px;
+  padding-left: 15px;
 
 }
