--- a/scss/header.scss
+++ b/scss/header.scss
@@ -11,12 +11,12 @@
     overflow: hidden;
     background-color: #FA6E6E;
     position: fixed;
-    position: relative;
     top: 0;
     width: 100%;
     display: flex;
     height: 3.5rem;
     justify-content: space-between;
+    z-index: 2;
 
 }
 
