--- a/css/footer.css
+++ b/css/footer.css
@@ -3,10 +3,10 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  padding: 4ch;
   background-color: #FA6E6E;
   color: rgb(255, 255, 255);
   text-align: center;
+  padding: 1%;
 }
 
 .footer__links {
