styling probleem gefixed

--- a/scss/infopage.scss
+++ b/scss/infopage.scss
@@ -28,17 +28,20 @@
 }
 .page-divider{
     background: lightgray;
-    height: 3rem;
+    height: 4rem;
+    display: flex;
+    align-items: center;
 }
 .page-divider > .page-divider-text{
     font-size: 30px;
+    height: 2rem;
 }
 .big-hug-content > .big-hug-text{
     font-size: 30px;
     white-space: pre-line;
 }    
 .big-hug-content > .big-hug-img{
-    left: 50%;
+    left: 60%;
     position: absolute;
     top: 70%;
 }
