--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,12 @@
 .footer {
   position: fixed;
+  margin-top: 2%;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: #FA6E6E;
   color: rgb(255, 255, 255);
   text-align: center;
-  padding: 1%;
 }
 
 .footer__links {
