--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -11,12 +11,14 @@
 }
 
 .title {
+  padding-left: 14px;
   margin-top: 4rem;
   margin-bottom: 1rem;
   font-weight: bold;
 }
 
 .aboutUs-divider {
+  padding-left: 14px;
   background-color: #D2DFD9;
   height: 4rem;
   display: flex;
@@ -34,6 +36,10 @@
   left: 10px;
   right: 20px;
   padding-left: 15px;
+}
+
+.text-section {
+  width: 59vw;
 }
 
 /*# sourceMappingURL=aboutUs.css.map */
