--- a/scss/aboutUs.scss
+++ b/scss/aboutUs.scss
@@ -10,12 +10,14 @@
   padding-left: 15px;
 }
 .title{
+  padding-left: 14px;
 margin-top: 4rem;
 margin-bottom: 1rem;
     font-weight: bold;
 
 }
 .aboutUs-divider{
+    padding-left: 14px;
       background-color: #D2DFD9;
         height: 4rem;
         display: flex;
@@ -33,4 +35,7 @@ margin-bottom: 1rem;
   right: 20px;
   padding-left: 15px;
 
+}
+.text-section{
+  width: 59vw;
 }
