--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -28,6 +28,7 @@
 }
 
 .aboutUs-text {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", "Geneva", "Verdana", "sans-serif";
   font-size: 1.2rem;
   line-height: 1.7;
   border-left: 14px solid #cadcd4;
