--- a/scss/aboutUs.scss
+++ b/scss/aboutUs.scss
@@ -26,6 +26,7 @@ margin-bottom: 1rem;
         margin-bottom: 1rem;
 }
 .aboutUs-text {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
   font-size: 1.2rem;
   line-height: 1.7;
   border-left: 14px solid #cadcd4;
