--- a/css/homepage.css
+++ b/css/homepage.css
@@ -35,6 +35,7 @@
 }
 .home-tekst p {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 20px;
 }
 
 /*# sourceMappingURL=homepage.css.map */
