--- a/scss/infopage.scss
+++ b/scss/infopage.scss
@@ -19,17 +19,22 @@
 .upper-text > .upper-text-content > .text-2{
     font-size: 25px;
     white-space: pre-line;
+    margin-right: 50px;
 }
 .upper-text > .image{
     display: flex;
     margin: 10px;
     height: 30rem;
+    width: auto;
 }
 .page-divider{
     background: #D2DFD9;
     height: 4rem;
     display: flex;
     align-items: center;
+    position: relative;
+    top: -90px;
+    
 }
 .page-divider > .page-divider-text{
     font-size: 30px;
@@ -39,9 +44,14 @@
     font-size: 30px;
     white-space: pre-line;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    height: 4rem;
+    position: relative;
+    top: -120px;
 }    
 .big-hug-content > .big-hug-img{
     left: 60%;
     position: absolute;
-    top: 70%;
+    top: 55%;
 }
+//.big-hug-content > .big-hug-names{
+    
