--- a/scss/infopage.scss
+++ b/scss/infopage.scss
@@ -20,12 +20,16 @@
     font-size: 25px;
     white-space: pre-line;
     margin-right: 50px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .upper-text > .image{
     display: flex;
     margin: 10px;
     height: 30rem;
-    width: auto;
+ 
+    position: relative;
+    top: -35px;
+    left: 6rem;
 }
 .page-divider{
     background: #D2DFD9;
@@ -33,12 +37,14 @@
     display: flex;
     align-items: center;
     position: relative;
-    top: -90px;
+    top: -124px;
     
 }
 .page-divider > .page-divider-text{
     font-size: 30px;
     height: 2rem;
+    position: relative;
+    left: 4rem;
 }
 .big-hug-content > .big-hug-text{
     font-size: 30px;
@@ -46,12 +52,27 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     height: 4rem;
     position: relative;
-    top: -120px;
+    top: -170px;
+    left: 4rem;
+    width: 50%;
 }    
 .big-hug-content > .big-hug-img{
     left: 60%;
-    position: absolute;
-    top: 55%;
+    position: relative;
+    top: 52%;
+    width: 25rem;
 }
-//.big-hug-content > .big-hug-names{
-    
+.big-hug-content > .big-hug-slide > .big-hug-names{
+    text-align: center;
+    font-size: 40px;
+    position: relative;
+    left: -200px;
+    top: 10rem;
+}
+.big-hug-content > .big-hug-slide{
+    display: flex;
+    position: relative;
+    left: 40%;
+    // top: -15rem;
+   max-width: 20rem;
+}
