--- a/css/footer.css
+++ b/css/footer.css
@@ -1,26 +1,16 @@
-.footer {
-  position: fixed;
-  padding: 1%;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+@charset "UTF-8";
+footer .footer_links {
   background-color: #FA6E6E;
-  color: rgb(255, 255, 255);
   text-align: center;
-}
-
-.footer__links {
-  justify-content: space-around;
+  height: 4rem;
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
-ul {
-  list-style-type: none;
-}
-
-a {
-  color: inherit;
+footer a {
+  color: white;
   text-decoration: none;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana,  sans-serif;
 }
 
 /*# sourceMappingURL=footer.css.map */
