--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,20 +1,17 @@
-.footer {
-    position: fixed;
-    padding: 1%;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+footer {
+  .footer_links {
     background-color: #FA6E6E;
-    color: rgb(255, 255, 255);
     text-align: center;
-  } .footer__links {
-    justify-content: space-around;
+    height: 4rem;
     display: flex;
-  } ul {
-    list-style-type: none;
-  } a {
-    color: inherit;
-    text-decoration:none
-  }
+    justify-content: space-evenly;
+    align-items: center;
+  } 
+  
+  a {
+    color: white;
+    text-decoration:none;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  }
+}
      
     
