--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,4 +1,7 @@
-footer {
+@media screen and (min-width: 992px) {
+  .footerFAQ {
+    display: none;
+  }
   .footer_links {
     background-color: #FA6E6E;
     text-align: center;
@@ -7,11 +10,91 @@ footer {
     justify-content: space-evenly;
     align-items: center;
   } 
-  
   a {
     color: white;
     text-decoration:none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  }
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    .mobile {
+    display: none;
+    }
 }
-     
+
+
+@media screen and (max-width: 992px) {
+  footer {
+    .footer_links {
+      display: none ;
+    }
+  }
+  section.footerFAQ {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 2rem 0 2rem;
+
+    h2 {
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      font-size: 20px;  
+    }
+
+        .vragen {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 5rem;
     
+        button {
+        color: #000000;
+        }
+
+        .accordion {
+        cursor: pointer;
+        padding: 1rem 0;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        transition: 0.4s;
+        background-color: #FA6E6E;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 20px;    
+        }
+          
+        .accordion:after {
+          content: '\002B';
+          float: right;
+          margin-left: 5px;
+        }
+        
+        .active:after {
+          content: "\2212";
+        }
+          
+        .panel {
+          padding: 0 18px;
+          max-height: 0;
+          overflow: hidden;
+          transition: max-height 0.2s ease-out;
+          font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+          font-size: 20px;      
+        }
+    }
+  }
+  .footerFAQ {
+    background-color: #FA6E6E;
+    .footer_links {
+      text-align: center;
+      height: 4rem;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+    } 
+
+    a, .mobile {
+      color: white;
+      text-decoration:none;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      }
+  }
+}
