--- a/css/homepage.css
+++ b/css/homepage.css
@@ -28,7 +28,7 @@
 }
 
 .home-tekst {
-  margin: 4rem 0 10rem 5rem;
+  margin: 4rem 0 5rem 5rem;
 }
 .home-tekst h1 {
   color: #F7737A;
@@ -39,6 +39,12 @@
 }
 
 @media screen and (max-width: 992px) {
+  .home_divider {
+    display: none;
+  }
+  .home-tekst {
+    margin: 3rem;
+  }
   .home_banner img {
     margin-top: 3.5rem;
     object-fit: cover;
