--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -1,5 +1,10 @@
+.about-us-container {
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 4rem 0;
+}
+
 .aboutUs-banner {
-  float: right;
   width: 40vw;
 }
 
@@ -12,7 +17,6 @@
 
 .title {
   padding-left: 14px;
-  margin-top: 4rem;
   margin-bottom: 1rem;
   font-weight: bold;
 }
@@ -41,6 +45,19 @@
 
 .text-section {
   width: 59vw;
+}
+
+@media screen and (max-width: 950px) {
+  .about-us-container {
+    flex-direction: column;
+  }
+  .about-us-container .aboutUs-banner {
+    width: 100%;
+  }
+  .about-us-container .aboutUs-banner img {
+    max-height: 30rem;
+    object-fit: contain;
+  }
 }
 
 /*# sourceMappingURL=aboutUs.css.map */
