--- a/css/header.css
+++ b/css/header.css
@@ -69,5 +69,21 @@ a.logo-link {
 .menu-link {
   margin: 0 10px;
 }
+                @media only screen and (max-width: 768px) {
+                  .navigation-menu {
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    height: auto;
+                  }
+        
+                  .navigation-menu li {
+             margin-bottom: 10px;
+       }
+        
+     .navigation-menu li a {
+      font-size: 1.2rem;
+      padding: 10px;
+    }
+  }
 
-/*# sourceMappingURL=header.css.map */
+/*# sourceMappingURL=header.css.map */  
