--- a/scss/aboutUs.scss
+++ b/scss/aboutUs.scss
@@ -1,42 +1,63 @@
+.about-us-container {
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 4rem 0;
+  }
   .aboutUs-banner {
-  float: right;
-  width: 40vw;
-}
+    // float: right;
+    width: 40vw;
+  }
 
-.aboutUs-banner img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  padding-left: 15px;
-}
-.title{
-  padding-left: 14px;
-margin-top: 4rem;
-margin-bottom: 1rem;
+  .aboutUs-banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    padding-left: 15px;
+  }
+
+  .title {
+    padding-left: 14px;
+    margin-bottom: 1rem;
     font-weight: bold;
 
-}
-.aboutUs-divider{
-    padding-left: 14px;
-      background-color: #D2DFD9;
-        height: 4rem;
-        display: flex;
-        align-items: center;
-        font-size: 1.8rem;
-        margin-bottom: 1rem;
-}
-.aboutUs-text {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
-  font-size: 1.2rem;
-  line-height: 1.7;
-  border-left: 14px solid #cadcd4;
-  border-radius: 10px 0 0 10px;
-  position: relative;
-  left: 10px;
-  right: 20px;
-  padding-left: 15px;
+  }
 
-}
-.text-section{
-  width: 59vw;
-}
+  .aboutUs-divider {
+    padding-left: 14px;
+    background-color: #D2DFD9;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+  }
+
+  .aboutUs-text {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
+    font-size: 1.2rem;
+    line-height: 1.7;
+    border-left: 14px solid #cadcd4;
+    border-radius: 10px 0 0 10px;
+    position: relative;
+    left: 10px;
+    right: 20px;
+    padding-left: 15px;
+
+  }
+
+  .text-section {
+    width: 59vw;
+  }
+
+  @media screen and (max-width: 950px) {
+    .about-us-container {
+      flex-direction: column;
+      .aboutUs-banner {
+        width: 100%;
+        img {
+          max-height: 30rem;
+          object-fit: contain;
+        }
+      }
+    }
+  }
