--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -53,7 +53,7 @@ body {
   }
 
   .form-group button:hover {
-    background-color: #FA6E6E;
+    background-color: #337d36;
   }
 
   .error-message {
