--- a/css/infopage.css
+++ b/css/infopage.css
@@ -70,17 +70,78 @@
 
 .big-hug-content > .big-hug-slide > .big-hug-names {
   text-align: center;
-  font-size: 40px;
+  font-size: 60px;
   position: relative;
-  left: -200px;
-  top: 10rem;
+  left: 5rem;
+  top: 13rem;
 }
 
 .big-hug-content > .big-hug-slide {
   display: flex;
   position: relative;
-  left: 40%;
+  left: 60%;
+  top: -15rem;
   max-width: 20rem;
+}
+
+@media (min-width: 577px) and (max-width: 1338px) {
+  .upper-text {
+    margin: 60px;
+  }
+  .upper-text > .upper-text-content > .title {
+    width: 10rem;
+  }
+  .upper-text > .upper-text-content > .text-2 {
+    font-size: 18px;
+    margin-right: 40px;
+  }
+  .upper-text > .image {
+    height: 25rem;
+    top: -30px;
+    left: 5rem;
+  }
+  .page-divider > .page-divider-text {
+    font-size: 26px;
+    left: 3rem;
+  }
+  .big-hug-content > .big-hug-text {
+    font-size: 20px;
+    top: -150px;
+    left: 3rem;
+  }
+  .big-hug-content > .big-hug-slide > .big-hug-names {
+    font-size: 30px;
+  }
+  .big-hug-content > .big-hug-img {
+    width: 20rem;
+    top: 60px;
+  }
+}
+@media (max-width: 576px) {
+  .upper-text {
+    margin: 40px;
+  }
+  .upper-text > .upper-text-content > .title {
+    font-size: 40px;
+  }
+  .upper-text > .upper-text-content > .text-2 {
+    font-size: 18px;
+    margin-right: 30px;
+  }
+  .upper-text > .image {
+    height: 20rem;
+    top: -25px;
+    left: 3rem;
+  }
+  .page-divider > .page-divider-text {
+    font-size: 20px;
+    left: 2rem;
+  }
+  .big-hug-content > .big-hug-text {
+    font-size: 18px;
+    top: -120px;
+    left: 2rem;
+  }
 }
 
 /*# sourceMappingURL=infopage.css.map */
