--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -10,14 +10,16 @@
     justify-content: space-evenly;
     align-items: center;
   } 
-  a {
-    color: white;
-    text-decoration:none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  footer {
+    a {
+      color: white;
+      text-decoration:none;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
     .mobile {
-    display: none;
+      display: none;
     }
+  }
 }
 
 
