--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -7,7 +7,7 @@ iframe {
 div#lijn {
     position: relative;
     height: 4.5rem;
-    width: 1519px;
+    width: 100%;
     font-family: 'Playfair Display';
     font-size: 1.8rem;
     background-color: #D2DFD9;
@@ -52,9 +52,10 @@ div#lijn {
     }
 
     p.info {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         margin-bottom: 1.5rem;
         margin-left: 2.3rem;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
     #contactinfo {
@@ -82,6 +83,7 @@ div#lijn {
         position: relative;
         font-size: 2rem;
         bottom: 2.5rem;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
     .input {
@@ -101,26 +103,49 @@ div#lijn {
 
     #nieuwsbrief {
         margin-top: 1rem;
-        font-size: 1.3rem;
+        font-size: 1rem;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 }
 
 .button {
-    padding: 10px 20px;
+  padding: 10px 20px;
+  position: relative;
+  top: 2rem;
+  left: 22rem;
+  width: 10rem;
+  border-radius: 10px;
+  background-color: #D2DFD9;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow to create depth */
+}
+
+.button:hover {
+  background-color: #0000002e; /* Background color when hovering over the button */
+}
+
+.button:focus {
+  outline: none; /* Remove the default focus outline */
+  box-shadow: 0 0 0 1px rgb(255, 103, 103); /* Add a blue glow when focused */
+}
+    
+@media screen and (max-width: 1300px) {
+  #contactformulier {
     position: relative;
-    left: 22rem;
-    width: 10rem;
-    border-radius: 10px;
-    background-color: #D2DFD9;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow to create depth */
+    top: -2rem;
+    left: 2rem;
+    height: 20rem;
+    width: 23rem;
   }
-  
-  .button:hover {
-    background-color: #0000002e; /* Background color when hovering over the button */
+  .button {
+    left: 12rem;
+    top: 0.3rem;
   }
-  
-  .button:focus {
-    outline: none; /* Remove the default focus outline */
-    box-shadow: 0 0 0 1px rgb(255, 103, 103); /* Add a blue glow when focused */
+  #cinfo {
+    #bigimg {
+        left: 2rem;
+    }
   }
-      
+  iframe {
+    width: 100%;
+  }
+}
