--- a/css/infopage.css
+++ b/css/infopage.css
@@ -9,7 +9,7 @@
   display: flex;
 }
 
-.upper-text > .upper-text-content > .title {
+.upper-text > .upper-text-content > .imgtitle {
   font-size: 60px;
 }
 
@@ -48,6 +48,7 @@
   height: 2rem;
   position: relative;
   left: 4rem;
+  color: white;
 }
 
 .big-hug-content > .big-hug-text {
@@ -84,54 +85,22 @@
   max-width: 20rem;
 }
 
-@media (min-width: 577px) and (max-width: 1338px) {
-  .upper-text {
-    margin: 60px;
-  }
-  .upper-text > .upper-text-content > .title {
-    width: 10rem;
-  }
-  .upper-text > .upper-text-content > .text-2 {
-    font-size: 18px;
-    margin-right: 40px;
-  }
-  .upper-text > .image {
-    height: 25rem;
-    top: -30px;
-    left: 5rem;
-  }
-  .page-divider > .page-divider-text {
-    font-size: 26px;
-    left: 3rem;
-  }
-  .big-hug-content > .big-hug-text {
-    font-size: 20px;
-    top: -150px;
-    left: 3rem;
-  }
-  .big-hug-content > .big-hug-slide > .big-hug-names {
-    font-size: 30px;
-  }
-  .big-hug-content > .big-hug-img {
-    width: 20rem;
-    top: 60px;
-  }
-}
-@media (max-width: 576px) {
+@media (max-width: 1000px) {
   .upper-text {
     margin: 40px;
   }
   .upper-text > .upper-text-content > .title {
-    font-size: 40px;
+    font-size: 18px;
   }
   .upper-text > .upper-text-content > .text-2 {
     font-size: 18px;
     margin-right: 30px;
   }
   .upper-text > .image {
-    height: 20rem;
+    height: 15rem;
     top: -25px;
-    left: 3rem;
+    left: 6rem;
+    position: relative;
   }
   .page-divider > .page-divider-text {
     font-size: 20px;
@@ -141,6 +110,14 @@
     font-size: 18px;
     top: -120px;
     left: 2rem;
+  }
+  .big-hug-content > .big-hug-img {
+    height: 15rem;
+  }
+}
+@media (max-width: 557px) {
+  .upper-text > .upper-text-content > .title {
+    font-size: 10px;
   }
 }
 
