--- a/scss/updatepage.scss
+++ b/scss/updatepage.scss
@@ -3,3 +3,26 @@ body {
     margin: 0;
     padding: 0;
   }
+
+  .updtext {
+    margin-left: 20px;
+    margin-top: 60px;
+    color: #FA6E6E;
+  }
+
+  .texta{
+    width: 900px;
+    height: 700px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+    background-color: #D2DFD9 ;
+  }
+
+  .sub{
+    margin-left: 20px;
+    margin-top: 10px;
+    background-color: #FA6E6E;
+    width: 100px;
+    height: 50px;
+  }
